tests/NormalTests/paczka1/small_fuzzy/93820479.err
Error in line 1: 01m S425 51,2
Error in line 4: ysYueW A69 2,4
Error in line 13: 5syLZGct A69 3,6
